--- a/Film/Views/Home/Index.cshtml
+++ b/Film/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<Movie>
 
 @{
-    ViewData["Title"] = "Movie List";
+    ViewData["Title"] = "Movie List :)";
 }
 <div class="mb-2">
     <a asp-controller="Movie" asp-action="Add" class="btn btn-outline-primary">Add Movie</a>
